codigo python Concersao automatica.txt
>>> __builtins__.type('FalaGalera')
<type 'str'>
>>> 10 /2
5
>>> type (10/2)
<type 'int'>
>>> type(10 // 3)
<type 'int'>
>>> 10 / 2
5
>>> type(10/3)
<type 'int'>
>>>  type(10//3)
 
  File "<pyshell#297>", line 1
    type(10//3)
   ^
IndentationError: unexpected indent
>>>  type(10/3)
 
  File "<pyshell#298>", line 1
    type(10/3)
   ^
IndentationError: unexpected indent
>>> type(10/3)
<type 'int'>
>>> type( 10 / 3.3.)
SyntaxError: invalid syntax
>>> type (10/2)
<type 'int'>
>>> type(10/3)
<type 'int'>
>>> 10/3
3
>>> 10//3
3
>>> 10//3.3
3.0
>>> 
>>> 
>>> type 10// 3.3
SyntaxError: invalid syntax
>>> type(10//3.3)
<type 'float'>
>>> 10 / 3
3
>>> 10 /2.5
4.0
>>> 2 + True
3
>>> 2 + False
2
>>> dir(int)
['__abs__', '__add__', '__and__', '__class__', '__cmp__', '__coerce__', '__delattr__', '__div__', '__divmod__', '__doc__', '__float__', '__floordiv__', '__getattribute__', '__getnewargs__', '__hash__', '__hex__', '__index__', '__init__', '__int__', '__invert__', '__long__', '__lshift__', '__mod__', '__mul__', '__neg__', '__new__', '__nonzero__', '__oct__', '__or__', '__pos__', '__pow__', '__radd__', '__rand__', '__rdiv__', '__rdivmod__', '__reduce__', '__reduce_ex__', '__repr__', '__rfloordiv__', '__rlshift__', '__rmod__', '__rmul__', '__ror__', '__rpow__', '__rrshift__', '__rshift__', '__rsub__', '__rtruediv__', '__rxor__', '__setattr__', '__str__', '__sub__', '__truediv__', '__xor__']
>>> type(a)
<type 'int'>
>>> type(b)
<type 'int'>
>>> type(a-b)
<type 'int'>
>>> 5.0.is_integer()
Traceback (most recent call last):
  File "<pyshell#318>", line 1, in <module>
    5.0.is_integer()
AttributeError: 'float' object has no attribute 'is_integer'
>>> a =5
>>> 5.0.is_integer()
Traceback (most recent call last):
  File "<pyshell#320>", line 1, in <module>
    5.0.is_integer()
AttributeError: 'float' object has no attribute 'is_integer'
>>> (-3.6).__abs__()
3.6000000000000001
>>> dir(float)
['__abs__', '__add__', '__class__', '__coerce__', '__delattr__', '__div__', '__divmod__', '__doc__', '__eq__', '__float__', '__floordiv__', '__ge__', '__getattribute__', '__getformat__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__int__', '__le__', '__long__', '__lt__', '__mod__', '__mul__', '__ne__', '__neg__', '__new__', '__nonzero__', '__pos__', '__pow__', '__radd__', '__rdiv__', '__rdivmod__', '__reduce__', '__reduce_ex__', '__repr__', '__rfloordiv__', '__rmod__', '__rmul__', '__rpow__', '__rsub__', '__rtruediv__', '__setattr__', '__setformat__', '__str__', '__sub__', '__truediv__']
>>> dir (float)
['__abs__', '__add__', '__class__', '__coerce__', '__delattr__', '__div__', '__divmod__', '__doc__', '__eq__', '__float__', '__floordiv__', '__ge__', '__getattribute__', '__getformat__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__int__', '__le__', '__long__', '__lt__', '__mod__', '__mul__', '__ne__', '__neg__', '__new__', '__nonzero__', '__pos__', '__pow__', '__radd__', '__rdiv__', '__rdivmod__', '__reduce__', '__reduce_ex__', '__repr__', '__rfloordiv__', '__rmod__', '__rmul__', '__rpow__', '__rsub__', '__rtruediv__', '__setattr__', '__setformat__', '__str__', '__sub__', '__truediv__']
>>> 